Design System snags/tweaks: - make inline code look a bit nicer - fix spacing above "live examples" sections to use the default H2 top margin

--- a/repository-data/webfiles/src/main/scss/designsystem/base/_code.scss
+++ b/repository-data/webfiles/src/main/scss/designsystem/base/_code.scss
@@ -5,15 +5,15 @@ pre {
 code {
     @include ds_small-size;
 
-    background-color: $ds_colour__grey--lighter !important;
     line-height: line-height-on-grid($small-size);
 
     @include media-query(medium) {
         line-height: line-height-on-grid($small-size--medium, 2);
     }
 
-    &:not([data-lang]) {
+    &:not([class*="language-"]) {
         color: $ds_colour__red;
+        font-weight: $bold;
     }
 }
 
